tests/snapshots/dev_config__wukong_dev_config_diff_when_secret_key_not_found_from_bunker.snap
---
source: tests/dev_config.rs
expression: "std::str::from_utf8(&output.stderr).unwrap()"
---
[31mError[39m [38;5;244m-[39m Invalid secret path in the config file
[36mSuggestion[39m [38;5;244m-[39m 
	Please check the secret path in the config file: config/dev.exs


