tests/snapshots/dev_config__wukong_dev_config_help.snap
---
source: tests/dev_config.rs
expression: "std::str::from_utf8(&output.stdout).unwrap()"
---
This command group contains the commands to interact with the config secrets with bunker

Usage: wukong dev config [OPTIONS] <COMMAND>

Commands:
  push  Push the current configuration changes to the Bunker
  diff  Show changes between the local configuration and the Bunker
  help  Print this message or the help of the given subcommand(s)

Options:
  -a, --application <APPLICATION>  Override the application name that the CLI will perform the
                                   command against. If the flag is not used, then the CLI will use
                                   the default application name from the config
  -v, --verbose...                 Use verbos output. More output per occurrence.
                                   
                                   By default, it'll only report errors.
                                   `-v` show warnings
                                   `-vv` show info
                                   `-vvv` show debug
                                   `-vvvv` show trace
  -q, --quiet...                   Do not print log message
  -h, --help                       Print help

